feature: Added the widgets for top bar including profile pic, search bar and message

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="linked_in_clone"
+        android:label="LinkedIn Clone"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
